some changes to init

--- a/baseline/run_params.yaml
+++ b/baseline/run_params.yaml
@@ -3,13 +3,17 @@ nrestart: 100
 nhealth: 1
 nstatus: 1
 current_dt: 1.0e-8
-t_final: 1e-3
+t_final: 2e-5
 order:  2
 alpha_sc: 0.01
 s0_sc: -5.0
 kappa_sc: 0.5
 integrator: lsrk54
+#integrator: euler
+spec_diff: 1.e-4
 nspecies: 2
+mach_inj: 0.5
+total_pres_inj: 1e4
 #health_pres_min: 2727
 #health_pres_max: 287809
 health_pres_min: 10
