push for remote access

--- a/baseline/run_params.yaml
+++ b/baseline/run_params.yaml
@@ -1,17 +1,17 @@
 nviz: 100
-nrestart: 100
-nhealth: 1
-nstatus: 1
-current_dt: 1.0e-8
-t_final: 2e-5
-order:  2
-alpha_sc: 0.01
+nrestart: 1000
+nhealth: 100
+nstatus: 10
+current_dt: 5e-10
+t_final: 100000
+order:  3
+alpha_sc: 0.00
 s0_sc: -5.0
 kappa_sc: 0.5
 integrator: lsrk54
 #integrator: euler
 #spec_diff: 1.e-5
-spec_diff: 0.
+spec_diff: 1e-4
 nspecies: 2
 mach_inj: 0.5
 total_pres_inj: 1e4
