--- a/baseline/run_params.yaml
+++ b/baseline/run_params.yaml
@@ -5,8 +5,8 @@ nstatus: 1
 current_dt: 1.e-8
 t_final: 1.e-4
 order:  2
-#alpha_sc: 0.001
-alpha_sc: 0.
+alpha_sc: 0.0001
+#alpha_sc: 0.
 s0_sc: -5.0
 kappa_sc: 0.5
 integrator: lsrk54
