add some 3d runs

--- a/baseline_3D/run_params.yaml
+++ b/baseline_3D/run_params.yaml
@@ -1,25 +1,28 @@
 nviz: 100
+viz_level: 2
+viz_interval_type: 0
+t_viz_interval: 5e-7
 nrestart: 1000
 nhealth: 1
 nstatus: 1
-current_dt: 2.5e-9
+current_dt: 5.e-9
 #t_final: 1.e-4
-t_final: 1.e-4
+t_final: 1e-4
 constant_cfl: 0
-current_cfl: 0.5
+current_cfl: 0.25
 order:  2
+dimen: 3
 alpha_sc: 0.0001
 #alpha_sc: 0.
 s0_sc: -5.0
 kappa_sc: 0.5
 #integrator: lsrk54
-#integrator: rk4
 integrator: rk4
+#integrator: euler
 spec_diff: 1.e-4
 #spec_diff: 0.
-nspecies: 7
+nspecies: 2
 mach_inj: 1.0
-#total_pres_inj: 1e4
 total_pres_inj: 50400
 #health_pres_min: 2727
 #health_pres_max: 287809
