--- a/baseline_3D/run_params.yaml
+++ b/baseline_3D/run_params.yaml
@@ -5,7 +5,7 @@ t_viz_interval: 5e-7
 nrestart: 1000
 nhealth: 1
 nstatus: 1
-current_dt: 5.e-9
+current_dt: 2.5e-9
 #t_final: 1.e-4
 t_final: 1e-4
 constant_cfl: 0
@@ -21,7 +21,9 @@ integrator: rk4
 #integrator: euler
 spec_diff: 1.e-4
 #spec_diff: 0.
-nspecies: 2
+nspecies: 7
+pyro_temp_iter: 1
+pyro_temp_tol: 1e-4
 mach_inj: 1.0
 total_pres_inj: 50400
 #health_pres_min: 2727
